# AIE7-Cert-Challenge

./: .env-example  .gitignore  Agentic RAG evaluation experiments.ipynb  LICENSE  README.md  Report.md  Retriever comparison experiments.ipynb  Time-Tracking-Logs.md  batch_process_questions.py  build_agent_graph.py  build_graph_agent.py  core_functions.py  docker-compose.yml  evaluation_cache.py  evaluation_helpers.py  graph_rag_functions.py  heatmap_visualization.py  llm_tools_for_toolbelt.py  pyproject.toml  ragas-evaluation-metrics.csv  ragas_rank_retrievers.py  setup.sh  start-services.sh  stop-services.sh  tavily_tools.py  tool_calls_parser_for_eval.py  visualize_retriever_performance.py
docs/: Report.md  Time-Tracking-Logs.md
frontend/: Dockerfile  README.md  docker-compose.yml  docker-start.sh  index.html  next.config.js  package.json  serve.py  start.sh
golden-masters/: cc_golden_master_dataset.csv  mq_golden_master_dataset.csv  naive_golden_master_dataset.csv  pd_golden_master_dataset.csv
metrics/: initial-ragas-evaluation-metrics.csv  ragas-evaluation-metrics.csv
notebooks/: Agentic RAG evaluation experiments.ipynb  Retriever comparison experiments.ipynb
src/agents/: build_graph_agent.py  llm_tools_for_toolbelt.py
src/backend/: Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  simple_api.py  test_simple_api.py
src/core/: core_functions.py  graph_rag_functions.py
src/evaluation/: evaluation_helpers.py  metrics_config.py  ragas_metrics.py  ragas_rank_retrievers.py  tool_calls_parser_for_eval.py
src/tools/: tavily_tools.py
(+11 files in other folders)
