[project]
name = "13-advanced-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.69",
    "langchain-community>=0.3.16",
    "langchain-openai>=0.3.7",
    "langchain-anthropic>=0.3.8",
    "openai>=1.61.0",
    "tavily-python>=0.5.0",
    "langchain-groq>=0.2.4",
    "exa-py>=1.8.9",
    "arxiv>=2.1.3",
    "pymupdf>=1.26.3",
    "xmltodict>=0.14.2",
    "jupyterlab>=4.0.6",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere==0.4.4",
    "cohere>=5.12.0,<5.13.0", 
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",
    "numpy>=2.2.2",
    "ragas==0.2.10",
    "unstructured>=0.14.8",
    "nltk==3.8.1",
    "matplotlib",
    "seaborn",
    "joblib>=1.3.2",
    "ipywidgets>=8.1.1"
]
